add configuration handlers: get available_reactions and upload new configuration (to be implemented)
