# src/models/responses_additions.go
@@ -27,3 +27,11 @@ func (resp *ConfigurationPOSTResponse200) Code() int {
 func (resp *ConfigurationPOSTResponse422) Code() int {
 	return 422
 }
+
+func (resp *AvailableReactionsGETResponse200) Code() int {
+	return 200
+}
+
+func (resp *AvailableReactionsGETResponse404) Code() int {
+	return 404
+}
